# cardpack.rs

./: .gitignore  .rustfmt.toml  .travis.yml  2q  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  clippy.toml  deny.toml  librust_out.rlib
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: CI.yaml  audit.yml
.okf/: getting-started.md  index.md  log.md  viz.html
.okf/architecture/: card-model.md  crate-overview.md  domain-kernel.md  feature-flags.md  funky-engine.md  index.md  localization.md
.okf/decisions/: examples-flag-free-alias.md  examples-self-dev-dependency.md  index.md  rand-std-rng-unconditional.md  std-io-outside-full.md
.okf/decks/: deck-catalog.md  extending-decks.md  index.md
.okf/references/: docs-map.md  index.md
.okf/workflows/: build-and-test.md  index.md  wasm.md
benches/: draw.rs
docs/: 2026-04-29-la-tlh-locales-design.md  2026-04-29-seeded-shuffle-design.md  2026-04-29-seeded-shuffle-plan.md  2026-05-03-balatro-feature-spec.md  2026-07-11-effect-registry-design.md  EPIC-01_Funky.md  EPIC-01_Funky_Progress.md  EPIC-01a_Joker_Wiring_Backlog.md  EPIC-01b_Shop.md  EPIC-01c_Vouchers.md  EPIC-01d_Editions.md  EPIC-01e_Spectral_Cards.md  EPIC-02_Ganjifa.md  TECHNICAL_DEBT.md  audit-2026-04-09.md  audit-2026-04-29.md  audit-2026-07-18-domain-kernel.md  balatro-card-types-plan.md  release-v0.7.0.md  wasm.md
docs/deconstruct/: APPENDIX_Engineering_Constraints.md  DECON-01_Card_Model_And_Ordering.md  DECON-02_Pile_Operations.md  DECON-03_Shuffling_And_Determinism.md  DECON-04_Formats_Parsing_And_Encoding.md  DECON-05_French_Deck_Family.md  DECON-06_Tarot_And_Skat.md  DECON-07_Localization.md  DECON-08_Extension_And_Registry.md  MANIFEST.md
docs/deconstruct/vectors/: README.md
docs/deconstruct/vectors/card-model/: canonical-order.json  card-anatomy.json
docs/deconstruct/vectors/extension-registry/: registry.json
docs/deconstruct/vectors/formats/: ckc-encoding.json  parse-cases.json  roundtrip.json
docs/deconstruct/vectors/french-family/: compositions.json
docs/deconstruct/vectors/localization/: locales.json
docs/deconstruct/vectors/pile-ops/: draw-semantics.json  extraction.json  sort-variants.json
docs/deconstruct/vectors/shuffling/: seeded-shuffle.json
docs/deconstruct/vectors/tarot-skat/: compositions.json
docs/presentations/: epic-01-funky-balatro-cards.md
docs/superpowers/plans/: 2026-05-01-no-std-alloc.md  2026-07-12-phase-3-joker-counters.md  2026-07-13-funky-retriggers.md  2026-07-15-funky-lifecycle-hooks.md  2026-07-18-deconstruct-skill.md  2026-07-22-ganjifa-decks.md
docs/superpowers/specs/: 2026-05-01-no-std-alloc-design.md  2026-07-12-phase-3-joker-counters-design.md  2026-07-13-funky-retriggers-design.md  2026-07-15-funky-lifecycle-hooks-design.md  2026-07-18-deconstruct-skill-design.md
examples/: bitvec.rs  bridge.rs  bridge_display.rs  buffoon.rs  canasta.rs  ckc.rs  cli.rs  color.rs  deconstruct_vectors.rs  demo.rs  euchre.rs  funky_demo.rs  funky_tour.rs  handandfoot.rs  headandfoot.rs  no-limit.rs  no_std_smoke.rs  pinochle.rs  poker.rs  poker_5card.rs  poker_eval.rs  range.rs  serialize.rs  short_deck.rs  skat.rs  spades.rs  standard52.rs  suit_sort.rs  tarot.rs  traditional.rs  wasm.rs
src/: basic.rs  bussin.rs  card.rs  card_deck.rs  common.rs  funky.rs  lib.rs  localization.rs  macros.rs  main.rs  pack.rs  prelude.rs  prelude_old.rs  suit.rs  traits.rs
src/basic/: decks.rs  macros.rs  mod.rs  types.rs
src/basic/decks/: canasta.rs  cards.rs  dashavatara.rs  euchre24.rs  euchre32.rs  french.rs  mod.rs  mughal.rs  pinochle.rs  razz.rs  registry.rs  short.rs  skat.rs  spades.rs  standard52.rs  tarot.rs  tiny.rs
src/basic/decks/cards/: canasta.rs  french.rs  ganjifa.rs  pinochle.rs  skat.rs  tarot.rs
src/basic/decks/yaml/: french.yaml  razz.yaml
src/basic/types/: basic.rs  basic_card.rs  basic_pile.rs  card.rs  combos.rs  deck.rs  mod.rs  pile.rs  pips.rs  traits.rs
src/cards/: card.rs  card_cell.rs  card_error.rs  mod.rs  pack.rs  pile.rs  pile_map.rs  pile_set.rs  rank.rs  rank_name.rs  rank_short.rs  suit.rs  suit_letter.rs  suit_name.rs  suit_symbol.rs
src/cards/decks/: bridge.rs  card_constants.rs  deck_error.rs  mod.rs  standard52.rs  standard52_set.rs
src/common/: errors.rs  mod.rs  traits.rs  utils.rs
src/common/utils/: mod.rs
src/deck/: card.rs  card_deck.rs  mod.rs  rank.rs  rank_name.rs  rank_short.rs  suit.rs  suit_letter.rs  suit_name.rs  suit_symbol.rs
src/fanky/types/: fpips.rs
src/fluent/: fluent_name.rs  mod.rs  named.rs
src/fluent/locales/: core.ftl
src/fluent/locales/de/: french-deck.ftl  main.ftl  skat.ftl
src/fluent/locales/en-US/: french-deck.ftl  main.ftl  skat.ftl  tarot-deck.ftl
src/funky/: board.rs  decks.rs  macros.rs  mod.rs
src/funky/decks/: basic.rs  joker.rs  mod.rs  planet.rs  spectral.rs  tarot.rs  voucher.rs
src/funky/types/: blind.rs  board.rs  bpile.rs  buffoon_card.rs  buffoon_pile.rs  card.rs  draws.rs  edition.rs  effect.rs  fpips.rs  hands.rs  mod.rs  mpip.rs  score.rs  shop.rs  toggle.rs  voucher.rs
src/games/: mod.rs
src/games/poker/: bit_card.rs  bit_cards.rs  bucket.rs  cactus_kev.rs  cactus_kev_card.rs  cactus_kev_cards.rs  cactus_kev_hand.rs  cactus_kev_set.rs  eval.rs  hand_rank.rs  mod.rs
src/games/poker/alt/: holdem.rs  lookups.rs  mod.rs  original.rs  perfect.rs  vsup_card.rs  vsup_deck.rs
src/karten/: anzug.rs  anzug_buchstabe.rs  anzug_name.rs  anzug_symbol.rs  karte.rs  karten.rs  mod.rs  rang.rs  rang_kurz.rs  rang_name.rs  rank.rs  rank_name.rs  rank_short.rs  suit.rs  valuable.rs
src/localization/: mod.rs
src/localization/locales/: core.ftl
src/old/: card.rs  mod.rs  pack.rs  pile.rs  rank.rs  suit.rs
src/old/decks/: bridge.rs  standard52.rs  standard52_set.rs
src/old/fluent/: fluent_name.rs  named.rs
src/pack/: card.rs  pack.rs  rank.rs  suit.rs  suit_name.rs
src/preludes/: funky.rs  mod.rs
src/yaml/: razz_bad.yml
tests/: properties.rs  wasm.rs
(+49 files in other folders)
