[package]
name = "cardpack"
description = "Generic Deck of Cards"
version = "0.7.0"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
repository = "https://github.com/ImperialBower/cardpack.rs.git"
homepage = "https://github.com/ImperialBower/cardpack.rs"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
keywords = ["poker", "cards", "library"]
categories = ["game-development"] # https://crates.io/category_slugs
include = ["src/**", "Cargo.toml", "LICENSE", "README.md", "src/basic/decks/yaml/*.yaml"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "cardpack"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "i18n", "colored-display", "yaml", "serde"]
std = ["alloc", "rand/std", "rand/thread_rng", "serde?/std", "log/std"]
alloc = ["serde?/alloc"]
i18n = ["std", "dep:fluent-templates"]
colored-display = ["std", "dep:colored"]
yaml = ["std", "dep:serde_norway", "serde"]
serde = ["dep:serde", "alloc"]

[dependencies]
colored = { version = "3.1", optional = true }
fluent-templates = { version = "0.13", optional = true }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
log = { version = "0.4.29", default-features = false }
# rand's `std_rng` feature is unconditional (not gated on cardpack's `std`)
# because shuffle_with_seed/shuffled_with_seed use StdRng and must work
# under no_std. rand 0.9's `std_rng` only pulls in `rand_chacha` (no
# transitive `std`), so this is sound. Do NOT move `std_rng` into the
# `std` feature — that re-breaks seeded shuffle in no_std consumers.
rand = { version = "0.9", default-features = false, features = ["std_rng"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }
serde_norway = { version = "0.9.42", optional = true }
thiserror = { version = "2.0.18", default-features = false }

# rand 0.9 → rand_core 0.9 → getrandom 0.3 forces wasm32 consumers to pick
# a getrandom backend; without it, `cargo build --target wasm32-unknown-unknown`
# errors with "no backend selected." We turn on the `wasm_js` feature here
# (browser-targeting backend) so consumers don't have to add it themselves.
# Consumers still need to set `--cfg getrandom_backend="wasm_js"` via
# .cargo/config.toml (see docs/wasm.md).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# All ordinary dev-deps require std and cannot build for bare-metal targets
# (target_os = "none", e.g. thumbv7em-none-eabihf). Gate them off those targets
# so that `cargo build --no-default-features --target thumbv7em-none-eabihf`
# doesn't try to compile std-only crates as transitive dev-dep dependencies.
[target.'cfg(not(target_os = "none"))'.dev-dependencies]
ckc-rs = "0.1.15"
clap = { version = "4.5", features = ["derive", "unicode"] }
env_logger = "0.11"
rstest = "0.25"
term-table = "1.4.0"

# proptest's transitive `wait-timeout` is unix-only, so gate it off wasm.
# criterion uses std::time / std::process and won't build for wasm either.
# Both also require std, so gate off bare-metal targets as well.
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "none")))'.dev-dependencies]
criterion = "0.5"
proptest = "1"

# Used by tests/wasm.rs only when targeting wasm32.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "demo"
required-features = ["i18n", "colored-display"]

[[example]]
name = "headandfoot"
required-features = ["i18n", "colored-display"]

[[example]]
name = "bridge"

[[example]]
name = "poker"

[[example]]
name = "poker_eval"

[[example]]
name = "range"

[[example]]
name = "wasm"

[[example]]
name = "no_std_smoke"
required-features = []

[[bench]]
name = "draw"
harness = false
